--- a/barchat/index.html
+++ b/barchat/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bar Chart</title>
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
   <svg id="canvas">
     <text id="title" x="350" y="30">USA GDP</text>
   </svg>
 </body>
-<script defer src="/script.js"></script>
+<script defer src="./script.js" type="text/javascript"></script>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
