--- a/tree-map/index.html
+++ b/tree-map/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Treemap Diagram</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
   </head>
   <body>
@@ -98,6 +98,6 @@
       </div>
     </div>
   </body>
-  <script defer src="script.js"></script>
+  <script defer src="./script.js" type="text/javascript"></script>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
